--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node": ">=22.0.0"
   },
   "dependencies": {
+    "music-metadata": "^10.7.0",
     "strict-event-emitter-types": "^2.0.0"
   },
   "devDependencies": {
