--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serato-connect",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Library to read Serato DJ history files and emit change events",
   "private": false,
   "type": "commonjs",
@@ -24,7 +24,10 @@
     "build": "tsc --build tsconfig.json",
     "watch": "tsc --build tsconfig.json -w",
     "clean": "rm -rf dist",
-    "prepublishOnly": "npm run clean && npm run build && npm test"
+    "prepublishOnly": "npm run clean && npm run build && npm test",
+    "release": "node .github/release.js",
+    "release:patch": "node .github/release.js --patch",
+    "release:major": "node .github/release.js --major"
   },
   "engines": {
     "node": ">=22.0.0"
