chore: change license to MIT

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "serato-connect",
   "version": "1.0.0",
   "description": "Library to read Serato DJ history files and emit change events",
+  "license": "MIT",
   "private": false,
   "type": "commonjs",
   "main": "dist/index.js",
